# rust-practice

./: README.md
p01-variables/src/: main.rs
p04-type-casting/src/: main.rs
p0_hello_world/: Cargo.toml
p10_enum/: Cargo.toml
p10_enum/src/: main.rs
p11-match/src/: main.rs
p11_match/: Cargo.toml
p12_module/: Cargo.toml
p12_module/src/: seperate_file.rs
p13_collections/strings/: Cargo.toml
p2-types/src/: main.rs
p2_types/: Cargo.toml
p3_input/: Cargo.toml
p4_type_casting/: Cargo.toml
p5_control_flows/: Cargo.toml
p5_control_flows/src/: main.rs
p6_functions/src/: main.rs
p7-0-ownership/src/: main.rs
p7-1-string-slice/: Cargo.toml
p7_0_ownership/: Cargo.toml
p7_1_string_slice/src/: main.rs
p8_structs/: Cargo.toml
p8_structs/src/: main.rs
p9-structs_method/: Cargo.toml
p9-structs_method/src/: main.rs
package/: Cargo.toml
package/src/: main.rs
package/src/p00-hello-world/: Cargo.toml
package/src/p03-input/src/: main.rs
package/src/p07-0-ownership/: Cargo.toml
package/src/p12-module/src/: lib.rs
package/src/p13-collections/hashmaps/src/: main.rs
package/src/p13-collections/vectors/src/: main.rs
package/src/p14-error-handle/: Cargo.toml
package/src/p14-error-handle/src/: main.rs
package/src/p15-generics/enums/src/: main.rs
package/src/p15-generics/functions/src/: main.rs
package/src/p15-generics/structs/src/: main.rs
package/src/p16-traits/: Cargo.toml
package/src/p16-traits/src/: main.rs
package/src/p17-lifetimes/: Cargo.toml
package/src/p17-lifetimes/src/: all_together.rs  main.rs
(+3 files in other folders)
